compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__no_errors_basic_generic_function.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn foo<X>(x X) -> X {
x
}



Diagnostics


