compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__no_errors_restriction_met_struct_initialization.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn main() -> () {
let foo <unknown type> = struct Foo {
x: struct Bazz {

}
};
}



Diagnostics


