compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__restriction_not_met_struct_initialization.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
//  main.flx

trait Bar {
    
    
}

struct Foo<T> where T is Bar {
T x}

fn main() -> () {
    let foo Foo = struct Foo {     x: 0 };
}

Diagnostics

[E0045] Error: trait restrictions not met
    ,-[ main.flx:12:20]
    |
  6 |     where T is Bar
    |           ^|^  
    |            `--- restriction `Bar` defined here
    | 
 12 |     let foo = Foo {
    |                    |  
    |                    `-- trait restriction `Bar` not met for type `int`
----'

