compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__trait_methods_not_implemented_in_apply.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
//  main.flx

trait Foo  {
    
    pub fn foo() -> ();
    pub fn bar() -> ();
    pub fn bazz() -> ();
}

struct Bar  {
}

apply Foo to Bar {
    
    
}


Diagnostics

[E0015] Error: unimplemented trait methods in apply
    ,-[ main.flx:11:8]
    |
  3 | ,-> trait Foo {
    : :   
  6 | |->     fn bazz();
    | |                    
    | `-------------------- trait methods `bar`, `bazz`, `foo` declared here
    | 
 11 |     apply Foo to Bar {
    |            ^|  
    |             `-- unimeplemented trait methods `bar`, `bazz`, `foo` in apply
----'

