compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__trait_restrictions_not_met_in_assoc_type.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
//  main.flx

trait Bar {
    
    
}

trait Bazz {
    
    
}

trait Foo {
    type A;
    
}

apply Foo to s32 {
    type A = u32;
    
}


Diagnostics

[E0045] Error: trait restrictions not met
    ,-[ main.flx:11:4]
    |
  7 |     type A is Bar + Bazz;
    |         ^|^   ^^|^  
    |          `---------- restriction `Bar` defined here
    |                 |   
    |                 `--- restriction `Bazz` defined here
    | 
 11 |     type A = u32;
    |    ^|^  
    |     `--- trait restrictions `Bar`, `Bazz` not met for type `u32`
----'

