compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__unassigned_assoc_types.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
//  main.flx

trait Foo {
    type A;
    type B;
    type C;
    
}

apply Foo to s32 {
    type B = s32;
    
}


Diagnostics

[E0032] Error: missing associated types in apply
   ,-[ main.flx:7:2]
   |
 7 | ,-> }
   : :   
 9 | |-> apply Foo to s32 {
   | |                        
   | `------------------------ missing associated types `A`, `C` in application of trait `Foo`
---'

